package Logica;

public interface GestionApuesta {
    
    public void realizarApuesta(int valorFicha);
    public int retirarApuesta();
    public int verUltimaApuesta();
    public int getGanancia();

}
