package Logica.TiposDeApuesta;

import Logica.Apuesta;

public class Plena extends Apuesta{
    public Plena(){
        super(35);
    }
}
